--- a/main.css
+++ b/main.css
@@ -1,3 +1,68 @@
-body {
-	background-color: red;
+p {
+	border-bottom: 3px solid red;
+	display: block;
+}
+
+.kermit {
+	border: 3px solid green;
+}
+
+#main-div-1 {
+	padding: 10px;
+}
+
+
+#main-div-2 .kermit {				/* targets ALL the .kermit nested anywhere beneath the parent main div 2 */
+	display: inline;
+	border: 3px dotted purple;
+}
+
+#main-div-2 > * {					/* only targets children beneath main div 2, but nothing nested farther */
+	border: 4px solid black;		
+}
+
+h2 ~ p {							/* targets siblings of h2 */
+	border: 3px solid blue;
+}
+
+#li-1 {
+	font-size: 30px;
+}
+
+#li-2 {
+	font-weight: bold;
+}
+
+#li-3 {
+	text-transform: uppercase;
+}
+
+#mystery-ul {
+	font-family: 'Mystery quest';
+}
+
+#flex-kermit {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+#flex-kermit img {
+	margin: 7px;
+	padding: 10px;
+	max-width: 100%;
+}
+
+
+
+/*******************************
+Screwing around below here
+*******************************/
+
+.sub-div {
+	color: slategray;
+}
+
+div.main-div-3 {
+	background-color: lightblue;
 }
